css/style.css
/* ... */
@media (max-width: 991.98px) {
  .ftco-navbar-light .navbar-nav>.nav-item.ftco-seperator:before {
    display: none;
  }
}

@media (max-width: 767.98px) {
  .ftco-navbar-light .navbar-nav>.nav-item.cta {
    margin-bottom: 20px;
  }
}

.ftco-navbar-light .navbar-nav>.nav-item.cta>a {
  color: #fff;
  border: 1px solid #fac564;
  background: #fac564;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 20px;
  padding-right: 20px;
  margin-top: 4px;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  border-radius: 30px;
}

.ftco-navbar-light .navbar-nav>.nav-item.cta>a span {
  display: inline-block;
  color: #fff;
}

.ftco-navbar-light .navbar-nav>.nav-item.cta>a:hover {
  background: #fac564;
  border: 1px solid #fac564;
}

.ftco-navbar-light .navbar-nav>.nav-item.cta.cta-colored span {
  border-color: #fac564;
}

.ftco-navbar-light .navbar-nav>.nav-item.active>a {
  color: #fac564;
}

.ftco-navbar-light .navbar-toggler {
  border: none;
  color: rgba(255, 255, 255, 0.8) !important;
  cursor: pointer;
  padding-right: 0;
  text-transform: uppercase;
  font-size: 16px;
  letter-spacing: 0.1em;
}

.ftco-navbar-light.scrolled {
  position: fixed;
  right: 0;
  left: 0;
  top: 0;
  margin-top: -130px;
  background: #121618 !important;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
}

.ftco-navbar-light.scrolled .nav-item>.nav-link {
  color: #fff !important;
}

.ftco-navbar-light.scrolled .nav-item.active>a {
  color: #fac564 !important;
}

.ftco-navbar-light.scrolled .nav-item.cta>a {
  color: #fff !important;
  background: #fac564;
  border: none !important;
  padding-top: 0.5rem !important;
  padding-bottom: 0.5rem !important;
  padding-left: 20px;
  padding-right: 20px;
  margin-top: 6px !important;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  border-radius: 30px;
}

.ftco-navbar-light.scrolled .nav-item.cta>a span {
  display: inline-block;
  color: #fff !important;
}

.ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
  border-color: #fac564;
}

@media (max-width: 991.98px) {
  .ftco-navbar-light.scrolled .navbar-nav {
    background: none;
    border-radius: 0px;
    padding-left: 0rem !important;
    padding-right: 0rem !important;
  }
}

@media (max-width: 767.98px) {
  .ftco-navbar-light.scrolled .navbar-nav {
    background: none;
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
}

.ftco-navbar-light.scrolled .navbar-toggler {
  border: none;
  color: rgba(255, 255, 255, 0.8) !important;
  border-color: rgba(0, 0, 0, 0.5) !important;
  cursor: pointer;
  padding-right: 0;
  text-transform: uppercase;
  font-size: 16px;
  letter-spacing: 0.1em;
}

.ftco-navbar-light.scrolled .nav-link {
  padding-top: 0.9rem !important;
  padding-bottom: 0.9rem !important;
  color: #000 !important;
}

.ftco-navbar-light.scrolled .nav-link.active {
  color: #fac564 !important;
}

.ftco-navbar-light.scrolled.awake {
  margin-top: 0px;
  transition: 0.3s all ease-out;
}

.ftco-navbar-light.scrolled.sleep {
  transition: 0.3s all ease-out;
}

.ftco-navbar-light.scrolled .navbar-brand {
  color: #fff;
}

.navbar-brand {
  font-size: 24px;
  line-height: 1;
}

.navbar-brand span {
  font-size: 24px;
  color: #fac564;
}

.navbar-brand small {
  text-transform: uppercase;
  font-size: 11px;
  display: block;
  text-align: center;
  color: #fac564;
  letter-spacing: 4px;
}

.owl-carousel {
  position: relative;
}

.owl-carousel .owl-item {
  opacity: 0.4;
}

.owl-carousel .owl-item.active {
  opacity: 1;
}

.owl-carousel .owl-nav {
  position: absolute;
  top: 50%;
  width: 100%;
}

.owl-carousel .owl-nav .owl-prev,
.owl-carousel .owl-nav .owl-next {
  position: absolute;
  transform: translateY(-50%);
  margin-top: -10px;
  color: #fac564 !important;
  -moz-transition: all 0.7s ease;
  -o-transition: all 0.7s ease;
  -webkit-transition: all 0.7s ease;
  -ms-transition: all 0.7s ease;
  transition: all 0.7s ease;
}

.owl-carousel .owl-nav .owl-prev span:before,
.owl-carousel .owl-nav .owl-next span:before {
  font-size: 30px;
}

.owl-carousel .owl-nav .owl-prev,
.owl-carousel .owl-nav .owl-next {
  opacity: 0;
}

.owl-carousel .owl-nav .owl-prev {
  left: 0;
}

.owl-carousel .owl-nav .owl-next {
  right: 0;
}

.owl-carousel:hover .owl-nav .owl-prev,
.owl-carousel:hover .owl-nav .owl-next {
  opacity: 1;
}

.owl-carousel:hover .owl-nav .owl-prev {
  left: -25px;
}

.owl-carousel:hover .owl-nav .owl-next {
  right: -25px;
}

.owl-carousel.home-slider {
  position: relative;
  height: 600px;
  z-index: 0;
}

.owl-carousel.home-slider .slider-item {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  height: 600px;
  position: relative;
  z-index: 0;
}

.owl-carousel.home-slider .slider-item .overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: #000;
  opacity: 0.7;
}

.owl-carousel.home-slider .slider-item .slider-text {
  color: #fff;
  height: 600px;
  text-align: right;
  max-width: 90%;
  margin: 0 auto;
}

@media (min-width: 992px) {
  .owl-carousel.home-slider {
    height: calc(100vh - 86px);
  }

  .owl-carousel.home-slider .slider-item {
    height: calc(100vh - 86px);
  }

  .owl-carousel.home-slider .slider-item .slider-text {
    height: calc(100vh - 86px);
  }

  .owl-carousel.home-slider .slider-item .slider-text .order-md-last {
    text-align: left !important;
  }
}

@media (max-width: 767.98px) {
  .owl-carousel.home-slider .slider-item .slider-text {
    text-align: center;
  }
}

.owl-carousel.home-slider .slider-item .slider-text .subheading {
  font-family: "Nothing You Could Do", cursive;
  font-size: 30px;
  color: #fac564;
}

.owl-carousel.home-slider .slider-item .slider-text h1 {
  text-transform: uppercase;
  font-size: 32px;
  color: #fff;
  line-height: 1.5;
  font-weight: bold;
  font-family: "Rajdhani";
  letter-spacing: 1px;
}
/* ... */

